-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.6.0 Beta3
-
macOS11 x64, branch 6.6
-
-
2ccab2a0e (112-based), b295bd040 (112-based), 3e900b7a9 (dev), 6698b870a (6.6)
Extract Qt 6.6.0 beta3 sources to macOS11, configure:
cmake -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_OSX_ARCHITECTURES=x86_64;arm64 -DQT_BUILD_EXAMPLES=FALSE -DCMAKE_BUILD_TYPE=Release -DINPUT_separate_debug_info=no -DFEATURE_headersclean=ON -DFEATURE_framework=ON -DODBC_ROOT=/usr/local/opt/libiodbc -DPostgreSQL_ROOT=/Applications/Postgres.app/Contents/Versions/14/bin/.. -DOPENSSL_ROOT_DIR=/usr/local/openssl-1.1.1k -DQT_BUILD_TESTS=OFF -DCMAKE_MESSAGE_LOG_LEVEL=STATUS -G Ninja /Users/qt/RTA/src-6.6.0 -DCMAKE_INSTALL_PREFIX:PATH=/Users/qt/RTA/src-6.6.0/qtbase
Passed, compile: cmake --build . --parallel, fails:
[6117/18027] Run gn for target Pdf in /Users/qt/RTA/src-6.6.0/qtwebengine/src/pdf/Release/arm64 FAILED: qtwebengine/src/pdf/Release/arm64/QtPdf_objects.rsp qtwebengine/src/pdf/Release/arm64/QtPdf_archives.rsp qtwebengine/src/pdf/Release/arm64/QtPdf_libs.rsp qtwebengine/src/pdf/Release/arm64/QtPdf_ldir.rsp /Users/qt/RTA/src-6.6.0/qtwebengine/src/pdf/Release/arm64/QtPdf_objects.rsp /Users/qt/RTA/src-6.6.0/qtwebengine/src/pdf/Release/arm64/QtPdf_archives.rsp /Users/qt/RTA/src-6.6.0/qtwebengine/src/pdf/Release/arm64/QtPdf_libs.rsp /Users/qt/RTA/src-6.6.0/qtwebengine/src/pdf/Release/arm64/QtPdf_ldir.rsp cd /Users/qt/RTA/src-6.6.0/qtwebengine && /Applications/CMake.app/Contents/bin/cmake -DBUILD_DIR=/Users/qt/RTA/src-6.6.0/qtwebengine/src/pdf/Release/arm64 -DSOURCE_DIR=/Users/qt/RTA/src-6.6.0/qtwebengine/src/pdf -DMODULE=pdf -DQT_HOST_GN_PATH= -DPython3_EXECUTABLE=/Library/Frameworks/Python.framework/Versions/3.9/bin/python3 -DGN_THREADS= -P /Users/qt/RTA/src-6.6.0/qtwebengine/cmake/Gn.cmake -- Found Gn: /Users/qt/RTA/src-6.6.0/qtwebengine/install/bin/gn (found suitable exact version "6.6.0.qtwebengine.qt.io") -- Running gn in /Users/qt/RTA/src-6.6.0/qtwebengine/src/pdf/Release/arm64 -- GN command: /Users/qt/RTA/src-6.6.0/qtwebengine/install/bin/gn gen /Users/qt/RTA/src-6.6.0/qtwebengine/src/pdf/Release/arm64 --script-executable=/Library/Frameworks/Python.framework/Versions/3.9/bin/python3 --root=/Users/qt/RTA/src-6.6.0/qtwebengine/src/3rdparty/chromium -- GN arg file: /Users/qt/RTA/src-6.6.0/qtwebengine/src/pdf/Release/arm64/args.gn -- GN args: angle_enable_swiftshader=false angle_enable_vulkan=false blink_symbol_level=0 chrome_pgo_phase=0 clang_base_path="/Applications/Xcode13.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr" clang_use_chrome_plugins=false dawn_use_swiftshader=false dcheck_always_on=false enable_ipc_fuzzer=false enable_precompiled_headers=true enable_remoting=false enable_resource_allowlist_generation=false enable_swiftshader=false enable_swiftshader_vulkan=false enable_web_speech=false fatal_linker_warnings=false forbid_non_component_debug_builds=false init_stack_vars=false is_clang=true is_component_build=false is_debug=false is_gcc=false is_mingw=false is_msvc=false is_official_build=true is_qtwebengine=true is_shared=true is_unsafe_developer_build=false jumbo_build_excluded=["browser"] jumbo_file_merge_limit=8 mac_deployment_target="11.0" mac_sdk_min="12.1" pdf_enable_v8=false pdf_enable_xfa=false pdf_enable_xfa_bmp=false pdf_enable_xfa_gif=false pdf_enable_xfa_png=false pdf_enable_xfa_tiff=false pdfium_use_qt_libpng=false pdfium_use_system_libpng=false pdfium_use_system_libtiff=false pdfium_use_system_zlib=false qt_freetype_config="/Users/qt/RTA/src-6.6.0/qtwebengine/src/pdf/Release/arm64:qt_freetype_config" qt_harfbuzz_config="/Users/qt/RTA/src-6.6.0/qtwebengine/src/pdf/Release/arm64:qt_harfbuzz_config" qt_libjpeg_config="/Users/qt/RTA/src-6.6.0/qtwebengine/src/pdf/Release/arm64:qt_libjpeg_config" qt_libpng_config="/Users/qt/RTA/src-6.6.0/qtwebengine/src/pdf/Release/arm64:qt_libpng_config" qtwebengine_target="/Users/qt/RTA/src-6.6.0/qtwebengine/src/pdf/Release/arm64:QtPdf" strip_absolute_paths_from_debug_symbols=false symbol_level=0 target_cpu="arm64" treat_warnings_as_errors=false use_allocator_shim=false use_custom_libcxx=false use_dawn=false use_gold=false use_jumbo_build=true use_libcxx=true use_lld=false use_partition_alloc=true use_partition_alloc_as_malloc=false use_qt_freetype=false use_qt_harfbuzz=false use_qt_libjpeg=false use_sysroot=false use_system_libpng=false use_system_xcode=true use_thin_lto=false v8_symbol_level=0 CMake Error at cmake/Gn.cmake:75 (message): -- GN FAILED Segmentation fault[6118/18027] Building CXX object qtbase/src/tools/bootstrap/CMakeFiles/Bootstrap.dir/__/__/corelib/global/qendian.cpp.o [6119/18027] Building CXX object qtbase/src/tools/bootstrap/CMakeFiles/Bootstrap.dir/__/__/corelib/global/qmalloc.cpp.o [6120/18027] Building CXX object qtbase/src/tools/bootstrap/CMakeFiles/Bootstrap.dir/__/__/corelib/global/qnumeric.cpp.o [6121/18027] Building CXX object qtbase/src/tools/bootstrap/CMakeFiles/Bootstrap.dir/__/__/corelib/global/qfloat16.cpp.o [6122/18027] Run gn for target WebEngineCore in /Users/qt/RTA/src-6.6.0/qtwebengine/src/core/Release/arm64 FAILED: qtwebengine/src/core/Release/arm64/QtWebEngineCore_objects.rsp qtwebengine/src/core/Release/arm64/QtWebEngineCore_archives.rsp qtwebengine/src/core/Release/arm64/QtWebEngineCore_libs.rsp qtwebengine/src/core/Release/arm64/QtWebEngineCore_ldir.rsp qtwebengine/src/core/Release/arm64/convert_dict_objects.rsp qtwebengine/src/core/Release/arm64/convert_dict_archives.rsp qtwebengine/src/core/Release/arm64/convert_dict_libs.rsp qtwebengine/src/core/Release/arm64/convert_dict_ldir.rsp /Users/qt/RTA/src-6.6.0/qtwebengine/src/core/Release/arm64/QtWebEngineCore_objects.rsp /Users/qt/RTA/src-6.6.0/qtwebengine/src/core/Release/arm64/QtWebEngineCore_archives.rsp /Users/qt/RTA/src-6.6.0/qtwebengine/src/core/Release/arm64/QtWebEngineCore_libs.rsp /Users/qt/RTA/src-6.6.0/qtwebengine/src/core/Release/arm64/QtWebEngineCore_ldir.rsp /Users/qt/RTA/src-6.6.0/qtwebengine/src/core/Release/arm64/convert_dict_objects.rsp /Users/qt/RTA/src-6.6.0/qtwebengine/src/core/Release/arm64/convert_dict_archives.rsp /Users/qt/RTA/src-6.6.0/qtwebengine/src/core/Release/arm64/convert_dict_libs.rsp /Users/qt/RTA/src-6.6.0/qtwebengine/src/core/Release/arm64/convert_dict_ldir.rsp
Works on macOS12 x64.
Last time passed on macOS11 x64 with released beta2 content (qt5 2da4760c2136bb0d4edbe78209287c640504eb82).
I'll attach full log when I have it.