Temporary fix for missing macOS 12.3 SDK

It was missed during the move to 112-based.

Task-number: QTBUG-116278
Change-Id: Id4da0705f7825d069e45b662042df131eba10d9b
Reviewed-on: https://codereview.qt-project.org/c/qt/qtwebengine-chromium/+/500407
Reviewed-by: Michal Klocek <michal.klocek@qt.io>